--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/simyara/NodeJS-Mentoring-HW7/issues"
   },
-  "homepage": "https://github.com/simyara/NodeJS-Mentoring-HW7#readme"
+  "homepage": "https://github.com/simyara/NodeJS-Mentoring-HW7#readme",
+  "devDependencies": {
+    "eslint": "^5.0.1",
+    "nodemon": "^1.17.5"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongodb": "^3.1.1",
+    "mongoose": "^5.2.1"
+  }
 }
